--- a/functions/package.json
+++ b/functions/package.json
@@ -1,20 +1,28 @@
 {
   "name": "functions",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "firebase-admin": "^12.3.1",
-    "firebase-functions": "^5.0.1",
-    "telegraf": "^4.16.3"
+    "lint": "eslint .",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
-  }
+    "node": "18"
+  },
+  "main": "index.js",
+  "dependencies": {
+    "better-queue": "^3.8.12",
+    "firebase-admin": "^12.4.0",
+    "firebase-functions": "^5.1.0",
+    "telegraf": "^4.16.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
+    "firebase-functions-test": "^3.1.0"
+  },
+  "private": true
 }
